Archive2/8f/a718f2dd748e4e/output
main.cpp:7:5: error: static assertion failed: 
     static_assert(false, "");
     ^
main.cpp:10:27: error: call to non-constexpr function 'void* operator new(std::size_t)'
 template struct chars<new char>;
                           ^
main.cpp:10: confused by earlier errors, bailing out
Preprocessed source stored into /tmp/ccFUkDVY.out file, please attach this to your bugreport.
Traceback (most recent call last):
  File "/usr/share/apport/gcc_ice_hook", line 34, in <module>
    pr.write(open(apport.fileutils.make_report_path(pr), 'w'))
IOError: [Errno 30] Read-only file system: '/var/crash/_usr_lib_gcc_x86_64-linux-gnu_4.8_cc1plus.2002.crash'
Error in sys.excepthook:
Traceback (most recent call last):
  File "/usr/lib/python2.7/dist-packages/apport_python_hook.py", line 95, in apport_excepthook
    pr.add_proc_info()
  File "/usr/lib/python2.7/dist-packages/apport/report.py", line 432, in add_proc_info
    raise ValueError('invalid process')
ValueError: invalid process

Original exception was:
Traceback (most recent call last):
  File "/usr/share/apport/gcc_ice_hook", line 34, in <module>
    pr.write(open(apport.fileutils.make_report_path(pr), 'w'))
IOError: [Errno 30] Read-only file system: '/var/crash/_usr_lib_gcc_x86_64-linux-gnu_4.8_cc1plus.2002.crash'
